--- a/common/lib/xmodule/xmodule/css/capa/display.scss
+++ b/common/lib/xmodule/xmodule/css/capa/display.scss
@@ -171,13 +171,12 @@ div.problem {
   }
 
   .question-description {
-    @include margin(($baseline*0.75), 0);
     font-size: 0.9em;
   }
 
   form > label, .problem-group-label {
     display: block;
-    margin-bottom: $baseline;
+    margin-bottom: 0;
     font: inherit;
     color: inherit;
     -webkit-font-smoothing: initial;
