--- a/common/lib/capa/capa/templates/annotationinput.html
+++ b/common/lib/capa/capa/templates/annotationinput.html
@@ -60,5 +60,5 @@
 </form>
 
 % if msg:
-<span class="message" aria-describedby="answer_${id}" aria-live="polite" tabindex="-1">${HTML(msg)}</span>
+<span class="message" aria-describedby="input_${id}_comment" aria-live="polite" tabindex="-1">${HTML(msg)}</span>
 % endif
