--- a/common/lib/xmodule/xmodule/css/capa/display.scss
+++ b/common/lib/xmodule/xmodule/css/capa/display.scss
@@ -171,7 +171,7 @@ div.problem {
   }
 
   .question-description {
-    font-size: 0.9em;
+    font-size: $medium-font-size;
   }
 
   form > label, .problem-group-label {
