--- a/common/lib/capa/capa/templates/optioninput.html
+++ b/common/lib/capa/capa/templates/optioninput.html
@@ -24,7 +24,7 @@
   <div class="indicator-container">
     <span class="status ${status.classname}"
         id="status_${id}"
-        aria-describedby="input_${id}" data-tooltip="${status.display_tooltip}">
+        aria-describedby="label_${id}" data-tooltip="${status.display_tooltip}">
         <span class="sr">${value|h} - ${status.display_tooltip}</span>
     </span>
   </div>
