--- a/common/lib/capa/capa/templates/choicetext.html
+++ b/common/lib/capa/capa/templates/choicetext.html
@@ -75,7 +75,7 @@ from openedx.core.djangolib.markup import HTML
     <div class="capa_alert">${_(submitted_message)}</div>
     %endif
     % if msg:
-    <span class="message" aria-describedby="forinput${choice_id}" aria-live="polite" tabindex="-1">${HTML(msg)}</span>
+    <span class="message" aria-live="polite" tabindex="-1">${HTML(msg)}</span>
     % endif
 </form>
 </section>
